<?xml version="1.0"?>
<package format="2">
  <name>robot_arm</name>
  <version>0.0.0</version>
  <description>The robot_arm package</description>

  <maintainer email="loic.caille@cpe.fr">Loïc Caille</maintainer>
  <maintainer email="gabriel.bailly@cpe.fr">Gabriel Bailly</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
